trab/2/tests/should_fail/in_not.py
5 in not [10, 20,]
Apple not is Pinapple
"""aaaaa